--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">WindyDemo</string>
+    <string name="app_name">Windy Demo</string>
+    <string name="time_stamp">20:05 – 14 Feb, 2022</string>
+    <string name="city_demo_name">San Francisco</string>
+    <string name="weather_demo_name">Overcast clouds</string>
+    <string name="temp_demo_text">10°C</string>
+    <string name="remove">Remove</string>
 </resources>
